Fix login style for Ionic 4

--- a/generators/app/templates/src/app/login/__auth+ionic.login.component.html
+++ b/generators/app/templates/src/app/login/__auth+ionic.login.component.html
@@ -6,7 +6,7 @@
         <div class="login-header" text-center>
           <h1 translate>APP_NAME</h1>
           <h6>v{{version}}</h6>
-          <ion-list *ngIf="isWeb" color="primary" lines="none" no-margin>
+          <ion-list *ngIf="isWeb" color="primary" lines="none" no-padding>
             <ion-item lines="none" color="primary">
               <ion-label><span translate>Language</span></ion-label>
               <ion-select [ngModel]="currentLanguage" (ngModelChange)="setLanguage($event)" interface="popover">
@@ -20,29 +20,29 @@
             <ion-text color="danger" [hidden]="!error || loginForm.dirty || isLoading">
               <span padding translate>Username or password incorrect.</span>
             </ion-text>
-            <ion-list lines="none">
-              <ion-item>
-                <ion-label position="floating">{{'Username' | translate}}</ion-label>
+            <ion-list>
+              <ion-item lines="inset">
+                <ion-label color="medium" position="floating" translate>Username</ion-label>
                 <ion-input type="text" formControlName="username" autocomplete="username"></ion-input>
               </ion-item>
               <ion-text color="danger" [hidden]="loginForm.controls.username.valid || loginForm.controls.username.untouched">
                 <span padding translate>Username is required</span>
               </ion-text>
-              <ion-item>
-                <ion-label position="floating">{{'Password' | translate}}</ion-label>
+              <ion-item lines="inset">
+                <ion-label color="medium" position="floating" translate>Password</ion-label>
                 <ion-input type="password" formControlName="password" autocomplete="current-password"></ion-input>
               </ion-item>
               <ion-text color="danger" [hidden]="loginForm.controls.password.valid || loginForm.controls.password.untouched">
                 <span padding translate>Password is required</span>
               </ion-text>
               <ion-item padding-top lines="none">
-                <ion-checkbox formControlName="remember"></ion-checkbox>
-                <ion-label><span translate>Remember me</span></ion-label>
+                <ion-label translate>Remember me</ion-label>
+                <ion-checkbox slot="start" formControlName="remember"></ion-checkbox>
               </ion-item>
             </ion-list>
             <div padding-horizontal>
-              <ion-button type="submit" [disabled]="loginForm.invalid || isLoading" color="primary" expand="block">
-                <span translate>Login</span>
+              <ion-button type="submit" [disabled]="loginForm.invalid || isLoading" color="primary" expand="block" translate>
+                Login
               </ion-button>
             </div>
           </form>
