--- a/generators/app/templates/src/app/login/__auth+ionic.login.component.scss
+++ b/generators/app/templates/src/app/login/__auth+ionic.login.component.scss
@@ -1,20 +1,12 @@
-
 ion-grid,
 ion-row {
-  min-height: 100%;
-  flex: 1;
+  height: 100%;
 }
 
 .login-header,
 .login-background {
   background-color: var(--ion-color-primary);
   color: var(--ion-color-primary-contrast);
-}
-
-ion-select {
-  color: var(--ion-color-primary-contrast);
-
-  --icon-color: var(--ion-color-primary-contrast);
 }
 
 .login-background {
@@ -28,4 +20,3 @@ ion-select {
 .login-container {
   background-color: var(--ion-background-color);
 }
-
