--- a/generators/app/templates/src/app/shell/_shell.component.scss
+++ b/generators/app/templates/src/app/shell/_shell.component.scss
@@ -1,35 +1,26 @@
 <% if (props.ui === 'ionic') { -%>
 <%   if (props.layout === 'tabs') { -%>
-$tabs-height: 8.2rem;
+$tabs-width: 90px;
+$tabs-height: $tabs-width;
 
-.tabs::ng-deep {
-  .content {
-    .scroll-content,
-    .fixed-content {
-      height: 100%;
-    }
+@media (min-width: 768px) {
+  ion-tabs {
+    flex-direction: row-reverse;
   }
 
-  @media (min-width: 768px) {
-    .tabbar {
-      height: 100%;
-      width: $tabs-height;
-      flex-direction: column;
-      justify-content: flex-start;
+  ion-tab-bar {
+    height: 100%;
+    width: $tabs-width;
+    flex-direction: column;
+    justify-content: flex-start;
+    border-top: none;
+    border-right: var(--border);
+  }
 
-      .tab-button {
-        width: 100%;
-        height: $tabs-height;
-        flex: 0 1 auto;
-      }
-    }
-
-    .header,
-    .content {
-      left: $tabs-height;
-      right: 0;
-      width: calc(100% - #{$tabs-height});
-    }
+  ion-tab-button {
+    width: 100%;
+    height: $tabs-height;
+    flex: 0 1 auto;
   }
 }
 <%   } else if (props.layout === 'side-menu') { -%>
