Clean up Ionic 4 base styles

--- a/generators/app/templates/src/theme/__ionic.theme-variables.scss
+++ b/generators/app/templates/src/theme/__ionic.theme-variables.scss
@@ -2,15 +2,8 @@
  * Application global variables.
  */
 
-// Ionic Variables and Theming. For more info, please see: https://beta.ionicframework.com/docs/theming/css-variables
-
-
-// Named Color Variables
-// --------------------------------------------------
-// Named colors makes it easy to reuse colors on various components.
-// It's highly recommended to change the default colors to match your app's branding. Ionic uses a Sass map of colors
-// so you can add, rename and remove colors as needed.
-// The "primary" color is the only required color in the map.
+// Ionic Variables and Theming. For more info, please see:
+// http://ionicframework.com/docs/theming/
 
 :root {
   /** primary **/
