Fix Ionic tabs templates

--- a/generators/app/templates/src/app/settings/__ionic-tabs._settings.component.html
+++ b/generators/app/templates/src/app/settings/__ionic-tabs._settings.component.html
@@ -11,6 +11,7 @@
       <div class="profile-title">{{username}}</div>
     </div>
   </div>
+  <% } -%>
   <ion-list>
     <ion-list-header>
       <ion-label translate>Account</ion-label>
@@ -19,7 +20,7 @@
       <ion-icon name="contact" slot="start"></ion-icon>
       <ion-label translate>Profile</ion-label>
     </ion-item>
-    <ion-item (click)="logout()">
+    <ion-item button (click)="logout()">
       <ion-icon name="md-log-out" slot="start"></ion-icon>
       <ion-label translate>Logout</ion-label>
     </ion-item>
