Update dependencies, with some fixes
- Update tslint rules
- Improve electron packaging
- Migrate to latest version of ionic-webview

--- a/generators/app/templates/src/_index.html
+++ b/generators/app/templates/src/_index.html
@@ -54,7 +54,7 @@
 <% if (props.target.includes('cordova')) { -%>
   <!-- Include Cordova script only when needed -->
   <script>
-    if (!/^http/.test(location.protocol)|/^localhost:8080/.test(location.host)) {
+    if (/^app/.test(location.host)) {
       /**
        * https://github.com/angular/angular/issues/22509
        * Prevent cordova.js 5.2.4+ routing bug
