--- a/generators/app/templates/__cordova._config.xml
+++ b/generators/app/templates/__cordova._config.xml
@@ -6,7 +6,7 @@
   <content src="index.html"/>
   <access origin="*"/>
 <% if (props.mobile.includes('ios')) { -%>
-  <allow-navigation href="http://localhost:8080/*"/>
+  <allow-navigation href="http://app/*"/>
 <% } -%>
   <allow-intent href="http://*/*"/>
   <allow-intent href="https://*/*"/>
@@ -17,10 +17,10 @@
 
   <!-- Platforms -->
 <% if (props.mobile.includes('android')) { -%>
-  <engine name="android" spec="^7.0.0"/>
+  <engine name="android" spec="^8.0.0"/>
 <% } -%>
 <% if (props.mobile.includes('ios')) { -%>
-  <engine name="ios" spec="^4.5.4"/>
+  <engine name="ios" spec="^5.0.0"/>
 <% } -%>
 
 <% if (props.mobile.includes('android')) { -%>
@@ -117,6 +117,7 @@
 
 <% } -%>
   <!-- Common to all platforms -->
+  <preference name="Hostname" value="app" />
   <preference name="Fullscreen" value="false"/>
   <preference name="DisallowOverscroll" value="true"/>
   <preference name="Orientation" value="portrait"/>
@@ -140,6 +141,6 @@
   <plugin name="cordova-plugin-splashscreen" spec="^5.0.2"/>
   <plugin name="cordova-plugin-statusbar" spec="^2.4.1"/>
   <plugin name="cordova-plugin-whitelist" spec="^1.3.3"/>
-  <plugin name="cordova-plugin-ionic-webview" spec="^3.1.1" />
-  <plugin name="cordova-plugin-ionic-keyboard" spec="^2.0.5" />
+  <plugin name="cordova-plugin-ionic-webview" spec="^4.0.1" />
+  <plugin name="cordova-plugin-ionic-keyboard" spec="^2.1.2" />
 </widget>
