--- a/generators/app/templates/src/_main.scss
+++ b/generators/app/templates/src/_main.scss
@@ -24,7 +24,7 @@
 @import "~@fortawesome/fontawesome-free-webfonts/scss/fa-regular.scss";
 @import "~@fortawesome/fontawesome-free-webfonts/scss/fa-solid.scss";
 <% } else if (props.ui === 'material') { -%>
-@import "~material-design-icons-iconfont/dist/fonts/material-icons.css";
+@import "~material-design-icons-iconfont/src/material-design-icons.scss";
 
 // Angular Material custom theme
 // The mixins below must be included once so we separated them from the variables
