Fix bootstrap dropdown position (fix #488)

--- a/generators/app/templates/src/app/shell/header/__bootstrap._header.component.html
+++ b/generators/app/templates/src/app/shell/header/__bootstrap._header.component.html
@@ -17,7 +17,7 @@
         </a>
       </div>
       <div class="navbar-nav ml-auto">
-        <div class="nav-item" ngbDropdown placement="bottom-right">
+        <div class="nav-item" ngbDropdown display="dynamic" placement="bottom-right">
           <a id="language-dropdown" class="nav-link" ngbDropdownToggle>{{currentLanguage}}</a>
           <div ngbDropdownMenu aria-labelledby="language-dropdown">
             <button class="dropdown-item" *ngFor="let language of languages" (click)="setLanguage(language)">
@@ -26,7 +26,7 @@
           </div>
         </div>
 <% if (props.auth) { -%>
-        <div class="nav-item" ngbDropdown placement="bottom-right">
+        <div class="nav-item" ngbDropdown display="dynamic" placement="bottom-right">
           <a id="user-dropdown" class="nav-link" ngbDropdownToggle>
             <i class="fas fa-user-circle"></i>
           </a>
