chore: update ionic templates

--- a/generators/app/templates/src/app/login/__auth+ionic.login.component.html
+++ b/generators/app/templates/src/app/login/__auth+ionic.login.component.html
@@ -3,7 +3,7 @@
   <ion-grid no-padding>
     <ion-row justify-content-center no-padding>
       <ion-col size-sm="8" size-lg="6" size-xl="4" align-self-center no-padding>
-        <div class="login-header" text-center>
+        <div class="login-header" class="ion-text-center">
           <h1 translate>APP_NAME</h1>
           <h6>v{{version}}</h6>
           <ion-list *ngIf="isWeb" color="primary" lines="none" no-padding>
