--- a/generators/app/templates/src/app/settings/__ionic-tabs._settings.component.html
+++ b/generators/app/templates/src/app/settings/__ionic-tabs._settings.component.html
@@ -6,7 +6,7 @@
 <ion-content>
   <% if (props.auth) { -%>
   <div>
-    <div class="profile" text-center padding>
+    <div class="profile" class="ion-text-center" padding>
       <ion-icon class="profile-icon" name="contact"></ion-icon>
       <div class="profile-title">{{username}}</div>
     </div>
