--- a/generators/app/templates/src/app/shell/__ionic-side-menu._shell.component.html
+++ b/generators/app/templates/src/app/shell/__ionic-side-menu._shell.component.html
@@ -17,7 +17,7 @@
     <ion-content>
       <div ion-fixed>
 <% if (props.auth) { -%>
-        <div class="profile" class="ion-text-center" padding>
+        <div class="profile ion-text-center ion-padding">
           <ion-icon class="profile-icon" name="contact"></ion-icon>
           <div>
             <ion-menu-toggle auto-hide="false">
