--- a/generators/app/templates/src/app/shell/header/__bootstrap._header.component.html
+++ b/generators/app/templates/src/app/shell/header/__bootstrap._header.component.html
@@ -17,20 +17,20 @@
         </a>
       </div>
       <div class="navbar-nav ml-auto">
-        <div class="nav-item" ngbDropdown display="dynamic" placement="bottom-right">
+        <div class="nav-item" ngbDropdown>
           <a id="language-dropdown" class="nav-link" ngbDropdownToggle>{{currentLanguage}}</a>
-          <div ngbDropdownMenu aria-labelledby="language-dropdown">
+          <div ngbDropdownMenu aria-labelledby="language-dropdown" class="dropdown-menu dropdown-menu-right">
             <button class="dropdown-item" *ngFor="let language of languages" (click)="setLanguage(language)">
               {{language}}
             </button>
           </div>
         </div>
 <% if (props.auth) { -%>
-        <div class="nav-item" ngbDropdown display="dynamic" placement="bottom-right">
+        <div class="nav-item" ngbDropdown>
           <a id="user-dropdown" class="nav-link" ngbDropdownToggle>
             <i class="fas fa-user-circle"></i>
           </a>
-          <div ngbDropdownMenu aria-labelledby="user-dropdown">
+          <div ngbDropdownMenu aria-labelledby="user-dropdown" class="dropdown-menu dropdown-menu-right">
             <h6 class="dropdown-header">
               <span translate>Logged in as</span> <b>{{username}}</b></h6>
             <div class="dropdown-divider"></div>
