fix: template issues

--- a/generators/app/templates/src/app/login/__auth+ionic.login.component.html
+++ b/generators/app/templates/src/app/login/__auth+ionic.login.component.html
@@ -3,7 +3,7 @@
   <ion-grid class="ion-no-padding">
     <ion-row class="ion-justify-content-center ion-no-padding">
       <ion-col size-sm="8" size-lg="6" size-xl="4" class="ion-align-self-center ion-no-padding">
-        <div class="login-header" class="ion-text-center">
+        <div class="login-header ion-text-center">
           <h1 translate>APP_NAME</h1>
           <h6>v{{version}}</h6>
           <ion-list *ngIf="isWeb" color="primary" lines="none" class="ion-no-padding">
