feat: add i18n module and language selection at generation (close #262)
- Add i18n module
- Add dedicated language selector component
- Allow language selection during project generator
- Fix some Ionic template issues

Credits for original idea and work goes to @snowyu

BREAKING CHANGES:
Move all i18n related components to dedicated module

Co-authored-by: snowyu <snowyu.lee@gmail.com>

--- a/generators/app/templates/src/app/auth/__auth+ionic.login.component.html
+++ b/generators/app/templates/src/app/auth/__auth+ionic.login.component.html
@@ -7,12 +7,8 @@
           <h1 translate>APP_NAME</h1>
           <h6>v{{version}}</h6>
           <ion-list *ngIf="isWeb" color="primary" lines="none" class="ion-no-padding">
-            <ion-item lines="none" color="primary">
-              <ion-label><span translate>Language</span></ion-label>
-              <ion-select [ngModel]="currentLanguage" (ngModelChange)="setLanguage($event)" interface="popover">
-                <ion-select-option *ngFor="let language of languages" [value]="language">{{language}}</ion-select-option>
-              </ion-select>
-            </ion-item>
+            <app-language-selector type="select" itemClass="ion-color ion-color-primary item-lines-none">
+            </app-language-selector>
           </ion-list>
         </div>
         <div class="login-container">
