--- a/generators/app/templates/src/app/settings/__ionic-tabs._settings.component.html
+++ b/generators/app/templates/src/app/settings/__ionic-tabs._settings.component.html
@@ -7,7 +7,7 @@
   <% if (props.auth) { -%>
   <div>
     <div class="profile ion-text-center ion-padding">
-      <ion-icon class="profile-icon" name="contact"></ion-icon>
+      <ion-icon class="profile-icon" name="person-circle"></ion-icon>
       <div class="profile-title">{{username}}</div>
     </div>
   </div>
@@ -30,10 +30,7 @@
       <ion-list-header>
         <ion-label translate>Preferences</ion-label>
       </ion-list-header>
-      <ion-item button (click)="changeLanguage()">
-        <ion-icon name="md-globe" slot="start"></ion-icon>
-        <ion-label translate>Change language</ion-label>
-      </ion-item>
+      <app-language-selector type="item"></app-language-selector>
     </ng-container>
   </ion-list>
 </ion-content>
