--- a/generators/app/templates/src/app/shell/__material._shell.component.html
+++ b/generators/app/templates/src/app/shell/__material._shell.component.html
@@ -27,16 +27,7 @@
           </mat-menu>
 <%   } -%>
         </div>
-        <div>
-          <button mat-icon-button [matMenuTriggerFor]="languageMenu">
-            <mat-icon>language</mat-icon>
-          </button>
-          <mat-menu #languageMenu="matMenu">
-            <button mat-menu-item *ngFor="let language of languages" (click)="setLanguage(language)">
-              {{language}}
-            </button>
-          </mat-menu>
-        </div>
+        <app-language-selector icon="true"></app-language-selector>
       </mat-toolbar>
 <% } -%>
       <nav>
