--- a/generators/app/templates/src/app/shell/header/__bootstrap._header.component.html
+++ b/generators/app/templates/src/app/shell/header/__bootstrap._header.component.html
@@ -17,14 +17,7 @@
         </a>
       </div>
       <div class="navbar-nav ml-auto">
-        <div class="nav-item" ngbDropdown>
-          <a id="language-dropdown" class="nav-link" ngbDropdownToggle>{{currentLanguage}}</a>
-          <div ngbDropdownMenu aria-labelledby="language-dropdown" class="dropdown-menu dropdown-menu-right">
-            <button class="dropdown-item" *ngFor="let language of languages" (click)="setLanguage(language)">
-              {{language}}
-            </button>
-          </div>
-        </div>
+        <app-language-selector inNavbar="true" menuClass="dropdown-menu dropdown-menu-right"></app-language-selector>
 <% if (props.auth) { -%>
         <div class="nav-item" ngbDropdown>
           <a id="user-dropdown" class="nav-link" ngbDropdownToggle>
