--- a/generators/app/templates/src/app/shell/header/__material-simple._header.component.html
+++ b/generators/app/templates/src/app/shell/header/__material-simple._header.component.html
@@ -17,14 +17,7 @@
     </button>
   </div>
   <span fxFlex></span>
-  <button mat-icon-button [matMenuTriggerFor]="languageMenu">
-    <mat-icon>language</mat-icon>
-  </button>
-  <mat-menu #languageMenu="matMenu">
-    <button mat-menu-item *ngFor="let language of languages" (click)="setLanguage(language)">
-        {{language}}
-      </button>
-  </mat-menu>
+  <app-language-selector icon="true"></app-language-selector>
 <% if (props.auth) { -%>
   <button mat-icon-button [matMenuTriggerFor]="userMenu">
     <mat-icon>person</mat-icon>
