--- a/generators/app/templates/src/app/shell/header/__raw._header.component.html
+++ b/generators/app/templates/src/app/shell/header/__raw._header.component.html
@@ -6,11 +6,7 @@
   </nav>
   <div class="spacer"></div>
   <div>
-    <select (change)="setLanguage($event.target.value)">
-      <option *ngFor="let language of languages" [value]="language" [selected]="language === currentLanguage">
-        {{language}}
-      </option>
-    </select>
+    <app-language-selector></app-language-selector>
 <% if (props.auth) { -%>
     <div class="logout">
       <div>
