--- a/generators/app/templates/src/_index.html
+++ b/generators/app/templates/src/_index.html
@@ -14,6 +14,9 @@
 <% } else { -%>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <% } -%>
+<% if (props.target.includes('web') && props.gmt) { -%>
+  <meta name="google" content="notranslate">
+<% } -%>
 <% if (props.target.includes('cordova') || props.pwa) { -%>
   <meta name="theme-color" content="#4e8ef7"/>
 <% } -%>
