fix: remove extra translate in material template

--- a/generators/app/templates/src/app/shell/__material._shell.component.html
+++ b/generators/app/templates/src/app/shell/__material._shell.component.html
@@ -13,7 +13,7 @@
         <div fxFlex></div>
         <div>
 <%   if (props.auth) { -%>
-          <button mat-icon-button [matMenuTriggerFor]="userMenu" translate>
+          <button mat-icon-button [matMenuTriggerFor]="userMenu">
             <mat-icon>person</mat-icon>
           </button>
           <mat-menu #userMenu="matMenu">
