fix: update ionic icon names

--- a/generators/app/templates/src/app/settings/__ionic-tabs._settings.component.html
+++ b/generators/app/templates/src/app/settings/__ionic-tabs._settings.component.html
@@ -17,12 +17,12 @@
       <ion-label translate>Account</ion-label>
     </ion-list-header>
     <ion-item button>
-      <ion-icon name="contact" slot="start"></ion-icon>
+      <ion-icon name="person-circle" slot="start"></ion-icon>
       <ion-label translate>Profile</ion-label>
     </ion-item>
     <% if (props.auth) { -%>
     <ion-item button (click)="logout()">
-      <ion-icon name="md-log-out" slot="start"></ion-icon>
+      <ion-icon name="log-out" slot="start"></ion-icon>
       <ion-label translate>Logout</ion-label>
     </ion-item>
     <% } -%>
