Correct compodoc version pwa reference in index.html

--- a/generators/app/templates/src/_index.html
+++ b/generators/app/templates/src/_index.html
@@ -18,7 +18,7 @@
   <meta name="theme-color" content="#4e8ef7"/>
 <% } -%>
 <% if (props.pwa) { -%>
-  <link rel="manifest" href="manifest.json"/>
+  <link rel="manifest" href="manifest.webmanifest"/>
 
 <% } -%>
 <% if (props.target.includes('web')) { -%>
