fix: strict mode errors

--- a/generators/app/templates/src/app/home/__material._home.component.html
+++ b/generators/app/templates/src/app/home/__material._home.component.html
@@ -6,7 +6,7 @@
     <mat-card-content>
       <mat-card-title translate>Hello world !</mat-card-title>
       <mat-card-subtitle>
-        <app-loader [isLoading]="isLoading" size="1.5"></app-loader>
+        <app-loader [isLoading]="isLoading" [size]="1.5"></app-loader>
         <q [hidden]="isLoading">{{quote}}</q>
       </mat-card-subtitle>
 <% if (props.angulartics) { -%>
