--- a/generators/app/templates/src/app/shell/__material._shell.component.html
+++ b/generators/app/templates/src/app/shell/__material._shell.component.html
@@ -27,7 +27,7 @@
           </mat-menu>
 <%   } -%>
         </div>
-        <app-language-selector icon="true"></app-language-selector>
+        <app-language-selector [icon]="true"></app-language-selector>
       </mat-toolbar>
 <% } -%>
       <nav>
