--- a/generators/app/templates/src/app/shell/header/__material-simple._header.component.html
+++ b/generators/app/templates/src/app/shell/header/__material-simple._header.component.html
@@ -17,7 +17,7 @@
     </button>
   </div>
   <span fxFlex></span>
-  <app-language-selector icon="true"></app-language-selector>
+  <app-language-selector [icon]="true"></app-language-selector>
 <% if (props.auth) { -%>
   <button mat-icon-button [matMenuTriggerFor]="userMenu">
     <mat-icon>person</mat-icon>
