--- a/generators/app/templates/src/app/shell/header/__bootstrap._header.component.html
+++ b/generators/app/templates/src/app/shell/header/__bootstrap._header.component.html
@@ -17,7 +17,7 @@
         </a>
       </div>
       <div class="navbar-nav ml-auto">
-        <app-language-selector inNavbar="true" menuClass="dropdown-menu dropdown-menu-right"></app-language-selector>
+        <app-language-selector [inNavbar]="true" menuClass="dropdown-menu dropdown-menu-right"></app-language-selector>
 <% if (props.auth) { -%>
         <div class="nav-item" ngbDropdown>
           <a id="user-dropdown" class="nav-link" ngbDropdownToggle>
