fix: angulartics errors in strict mode

--- a/generators/app/templates/src/app/home/__material._home.component.html
+++ b/generators/app/templates/src/app/home/__material._home.component.html
@@ -15,7 +15,7 @@
           mat-raised-button
           angulartics2On="click"
           angularticsAction="Click button below quote"
-          [angularticsCategory]="quote">
+          angularticsCategory="test">
           Click me to send an Analytics event
         </button>
       </mat-card-actions>
