--- a/generators/app/templates/src/app/home/__raw._home.component.html
+++ b/generators/app/templates/src/app/home/__raw._home.component.html
@@ -10,7 +10,7 @@
     <button
       angulartics2On="click"
       angularticsAction="Click button below quote"
-      [angularticsCategory]="quote">
+      angularticsCategory="test">
       Click me to send an Analytics event
     </button>
   </p>
