--- a/generators/app/templates/src/app/home/__bootstrap._home.component.html
+++ b/generators/app/templates/src/app/home/__bootstrap._home.component.html
@@ -12,7 +12,7 @@
         class="btn btn-primary"
         angulartics2On="click"
         angularticsAction="Click button below quote"
-        [angularticsCategory]="quote">
+        angularticsCategory="test">
         Click me to send an Analytics event
       </button>
     </p>
