--- a/generators/app/templates/src/app/home/__ionic._home.component.html
+++ b/generators/app/templates/src/app/home/__ionic._home.component.html
@@ -23,7 +23,7 @@
           ion-button
           angulartics2On="click"
           angularticsAction="Click button below quote"
-          [angularticsCategory]="quote">
+          angularticsCategory="test">
           Click me to send an Analytics event
         </button>
       </p>
