--- a/generators/app/templates/src/app/shell/_shell.component.scss
+++ b/generators/app/templates/src/app/shell/_shell.component.scss
@@ -56,7 +56,7 @@ $tabs-height: $tabs-width;
 }
 
 .has-border {
-  border-right: 1px solid rgba(0, 0, 0, 0.12);
+  border-right: 1px solid rgb(0 0 0 / 12%);
 }
 
 .mat-list {
@@ -67,7 +67,7 @@ $tabs-height: $tabs-width;
   text-decoration: none;
 
   &:hover {
-    background: rgba(0, 0, 0, 0.05);
+    background: rgb(0 0 0 / 5%);
   }
 }
 
