--- a/generators/app/templates/src/app/shell/header/__raw.header.component.scss
+++ b/generators/app/templates/src/app/shell/header/__raw.header.component.scss
@@ -27,7 +27,7 @@
   text-decoration: none;
 
   &:hover {
-    background: rgba(255, 255, 255, 0.15);
+    background: rgb(255 255 255 / 15%);
   }
 }
 
