chore: update misc files for ng 13
Co-authored-by: Fabio Martino <martino.fabio@libero.it>

--- a/generators/app/templates/src/_index.html
+++ b/generators/app/templates/src/_index.html
@@ -41,7 +41,7 @@
   <!-- End Google Analytics -->
 <% } -%>
 <% if (props.target.includes('web')) { -%>
-  <!--[if lt IE 10]>
+  <!--[if lte IE 11]>
   <p>
     You are using an <strong>outdated</strong> browser.
     Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.
