--- a/generators/app/templates/__cordova._config.xml
+++ b/generators/app/templates/__cordova._config.xml
@@ -20,7 +20,7 @@
 
   <!-- Platforms -->
 <% if (props.mobile.includes('android')) { -%>
-  <engine name="android" spec="^9.0.0"/>
+  <engine name="android" spec="^11.0.0"/>
 <% } -%>
 <% if (props.mobile.includes('ios')) { -%>
   <engine name="ios" spec="^6.2.0"/>
@@ -30,8 +30,10 @@
   <!-- Android specific -->
   <platform name="android">
     <allow-intent href="market:*"/>
-    <preference name="android-minSdkVersion" value="22"/>
+    <preference name="android-targetSdkVersion" value="32"/>
     <preference name="android-manifest/application/activity/@android:theme" value="@android:style/Theme.DeviceDefault"/>
+    <preference name="AndroidWindowSplashScreenAnimatedIcon" value="resources/android/icon/drawable-xxxhdpi-icon.png" />
+    <preference name="AndroidWindowSplashScreenBackground" value="#4487ff" />
     <!-- Copy files in the resources/android/extra folder to Android native resources -->
     <hook src="node_modules/@ngx-rocket/scripts/hooks/after_prepare/copy-android-resources.js" type="after_prepare"/>
     <icon density="ldpi" src="resources/android/icon/drawable-ldpi-icon.png"/>
@@ -40,18 +42,6 @@
     <icon density="xhdpi" src="resources/android/icon/drawable-xhdpi-icon.png"/>
     <icon density="xxhdpi" src="resources/android/icon/drawable-xxhdpi-icon.png"/>
     <icon density="xxxhdpi" src="resources/android/icon/drawable-xxxhdpi-icon.png"/>
-    <splash density="land-ldpi" src="resources/android/splash/drawable-land-ldpi-screen.png"/>
-    <splash density="land-mdpi" src="resources/android/splash/drawable-land-mdpi-screen.png"/>
-    <splash density="land-hdpi" src="resources/android/splash/drawable-land-hdpi-screen.png"/>
-    <splash density="land-xhdpi" src="resources/android/splash/drawable-land-xhdpi-screen.png"/>
-    <splash density="land-xxhdpi" src="resources/android/splash/drawable-land-xxhdpi-screen.png"/>
-    <splash density="land-xxxhdpi" src="resources/android/splash/drawable-land-xxxhdpi-screen.png"/>
-    <splash density="port-ldpi" src="resources/android/splash/drawable-port-ldpi-screen.png"/>
-    <splash density="port-mdpi" src="resources/android/splash/drawable-port-mdpi-screen.png"/>
-    <splash density="port-hdpi" src="resources/android/splash/drawable-port-hdpi-screen.png"/>
-    <splash density="port-xhdpi" src="resources/android/splash/drawable-port-xhdpi-screen.png"/>
-    <splash density="port-xxhdpi" src="resources/android/splash/drawable-port-xxhdpi-screen.png"/>
-    <splash density="port-xxxhdpi" src="resources/android/splash/drawable-port-xxxhdpi-screen.png"/>
   </platform>
 
 <% } -%>
@@ -140,10 +130,10 @@
   <preference name="SplashShowOnlyFirstTime" value="true"/>
 
   <!-- Plugins -->
-  <plugin name="cordova-custom-config" spec="^5.0.2"/>
-  <plugin name="cordova-plugin-device" spec="^2.0.2"/>
-  <plugin name="cordova-plugin-splashscreen" spec="^5.0.2"/>
-  <plugin name="cordova-plugin-statusbar" spec="^2.4.1"/>
-  <plugin name="cordova-plugin-ionic-webview" spec="^4.0.1" />
-  <plugin name="cordova-plugin-ionic-keyboard" spec="^2.1.2" />
+  <plugin name="cordova-custom-config" spec="^5.1.1"/>
+  <plugin name="cordova-plugin-device" spec="^2.1.0"/>
+  <plugin name="cordova-plugin-splashscreen" spec="^6.0.2"/>
+  <plugin name="cordova-plugin-statusbar" spec="^3.0.0"/>
+  <plugin name="cordova-plugin-ionic-webview" spec="^5.0.0" />
+  <plugin name="cordova-plugin-ionic-keyboard" spec="^2.2.0" />
 </widget>
