--- a/generators/app/templates/src/app/shell/header/__bootstrap._header.component.html
+++ b/generators/app/templates/src/app/shell/header/__bootstrap._header.component.html
@@ -18,13 +18,13 @@
           </a>
         </div>
         <div class="navbar-nav ml-auto">
-          <app-language-selector [inNavbar]="true" menuClass="dropdown-menu dropdown-menu-right"></app-language-selector>
+          <app-language-selector [inNavbar]="true"></app-language-selector>
 <% if (props.auth) { -%>
-          <div class="nav-item" ngbDropdown>
+          <div class="nav-item" ngbDropdown display="dynamic">
             <a id="user-dropdown" class="nav-link" ngbDropdownToggle>
               <i class="fas fa-user-circle"></i>
             </a>
-            <div ngbDropdownMenu aria-labelledby="user-dropdown" class="dropdown-menu dropdown-menu-right">
+            <div ngbDropdownMenu aria-labelledby="user-dropdown">
               <h6 class="dropdown-header">
                 <span translate>Logged in as</span> <b>{{username}}</b></h6>
               <div class="dropdown-divider"></div>
